small fix: button dark mode

--- a/src/app/components/table/modal/modal-footer/modal-footer.component.css
+++ b/src/app/components/table/modal/modal-footer/modal-footer.component.css
@@ -12,8 +12,20 @@
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
+@media (prefers-color-scheme: dark) {
+  .button {
+    box-shadow: 0 1px 3px rgba(255, 255, 255, 0.25),
+      0 1px 2px rgba(255, 255, 255, 0.22);
+  }
+}
 .button:hover {
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+@media (prefers-color-scheme: dark) {
+  .button:hover {
+    box-shadow: 0 14px 28px rgba(255, 255, 255, 0.25),
+      0 10px 10px rgba(255, 255, 255, 0.22);
+  }
 }
 .button-label {
   margin-left: 0.5rem;
